--- a/style.css
+++ b/style.css
@@ -39,12 +39,12 @@ main {
   width: 100vw;
   height: calc(100vh);
   object-fit: cover;
+  overflow: hidden;
 }
 
 .vid-container {
   position: relative;
-  width: 100%;
-  width: 100vh;
+  width: 100vw;
 }
 
 video {
@@ -59,6 +59,7 @@ video {
   object-fit: cover;
   position: absolute;
   z-index: -1;
+  overflow: hidden;
 }
 
 .gradient-2 {
@@ -69,6 +70,7 @@ video {
   object-fit: cover;
   position: absolute;
   z-index: -1;
+  overflow: hidden;
 }
 
 .navbar {
@@ -88,10 +90,20 @@ video {
 }
 
 .nav-cta {
-  padding: 0.6rem 1rem;
+  padding: 0.6rem 1.9rem;
   background: linear-gradient(to right, #F09819 0%, #EDDE5D 51%, #F09819 100%);
+  background: linear-gradient(to right, #FF9700 0%, #FFE400 51%, #FF9700 100%);
   border-radius: 30px;
   cursor: pointer;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 100;
+}
+
+.cta-success {
+  display: inline;
+  height: 20px;
+  width: 20px;
 }
 
 .menu-nav ul a {
