--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,7 @@ body {
     font-family: poppins;
     position: relative;
     font-family: 'Gobold-Uplow';
+    
     // font-family:  Helvetica, sans-serif
 }
 .transition-fade {
@@ -46,11 +47,15 @@ body {
     height: calc(100vh);
     // min-height: 600px;
     object-fit: cover;
+    overflow: hidden;
   }
   .vid-container {
     position: relative;
-    width: 100%;
-    width: 100vh;
+    // width: 100%;
+    width: 100vw;
+
+
+
     // top: 0;
     // left: 0;
   //   height: 100vh;
@@ -69,6 +74,8 @@ body {
     object-fit: cover;
     position: absolute;
     z-index: -1;
+    overflow: hidden;
+
   }
   .gradient-2 {
     // background: linear-gradient(141deg, rgba(98,0,240,.5) 0%, rgba(0,0,0,.5) 22%, rgba(0,0,0,.5) 51%, rgba(140,88,0,.5) 67%, rgba(0,0,0,1) 100%);
@@ -79,6 +86,8 @@ body {
     object-fit: cover;
     position: absolute;
     z-index: -1;
+    overflow: hidden;
+
   }
   // navbar
   .navbar {
@@ -91,16 +100,29 @@ body {
     background: #fff;
     height: 80px;
     color: #000;
+
   }
   .event-details {
     text-transform: uppercase;
   }
   .nav-cta {
-    padding: .6rem 1rem;
+    padding: .6rem 1.9rem;
     // background: orange;
     background: linear-gradient(to right, #F09819 0%, #EDDE5D 51%, #F09819 100%);
+    background: linear-gradient(to right, #FF9700 0%, #FFE400 51%, #FF9700 100%);
     border-radius: 30px;
     cursor: pointer;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: 100;
+
+  }
+
+  .cta-success {
+   display: inline;
+    height: 20px;
+    width: 20px;
+
   }
   .nav-menu-back {
   }
