--- a/style.css
+++ b/style.css
@@ -91,8 +91,8 @@ video {
 
 .nav-cta {
   padding: 0.6rem 1.9rem;
-  background: linear-gradient(to right, #F09819 0%, #EDDE5D 51%, #F09819 100%);
   background: linear-gradient(to right, #FF9700 0%, #FFE400 51%, #FF9700 100%);
+  background: #5773fe;
   border-radius: 30px;
   cursor: pointer;
   text-transform: uppercase;
