--- a/style.scss
+++ b/style.scss
@@ -108,8 +108,9 @@ body {
   .nav-cta {
     padding: .6rem 1.9rem;
     // background: orange;
-    background: linear-gradient(to right, #F09819 0%, #EDDE5D 51%, #F09819 100%);
+    // background: linear-gradient(to right, #F09819 0%, #EDDE5D 51%, #F09819 100%);
     background: linear-gradient(to right, #FF9700 0%, #FFE400 51%, #FF9700 100%);
+    background: rgb(87, 115, 254);
     border-radius: 30px;
     cursor: pointer;
     text-transform: uppercase;
