--- a/style.scss
+++ b/style.scss
@@ -110,7 +110,7 @@ body {
     // background: orange;
     // background: linear-gradient(to right, #F09819 0%, #EDDE5D 51%, #F09819 100%);
     background: linear-gradient(to right, #FF9700 0%, #FFE400 51%, #FF9700 100%);
-    background: rgb(87, 115, 254);
+    background: red;
     border-radius: 30px;
     cursor: pointer;
     text-transform: uppercase;
