--- a/style.scss
+++ b/style.scss
@@ -110,21 +110,18 @@ body {
     // background: orange;
     // background: linear-gradient(to right, #F09819 0%, #EDDE5D 51%, #F09819 100%);
     background: linear-gradient(to right, #FF9700 0%, #FFE400 51%, #FF9700 100%);
-    background: red;
+    // background: red;
     border-radius: 30px;
     cursor: pointer;
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 100;
+    text-decoration: none;
+    color: #000;
 
   }
 
-  .cta-success {
-   display: inline;
-    height: 20px;
-    width: 20px;
 
-  }
   .nav-menu-back {
   }
   .menu-nav ul a {
