--- a/style.scss
+++ b/style.scss
@@ -16,7 +16,7 @@ body {
     font-family: poppins;
     position: relative;
     font-family: 'Gobold-Uplow';
-    
+    font-size: 10px;
     // font-family:  Helvetica, sans-serif
 }
 .transition-fade {
@@ -39,13 +39,12 @@ body {
     // object-fit: cover;
     // z-index: -2;
     // background: #000;
-
+    // min-height: 600px;
     position: absolute;
     top: 0;
     z-index: -2;
     width: 100vw;
     height: calc(100vh);
-    // min-height: 600px;
     object-fit: cover;
     overflow: hidden;
   }
@@ -53,9 +52,6 @@ body {
     position: relative;
     // width: 100%;
     width: 100vw;
-
-
-
     // top: 0;
     // left: 0;
   //   height: 100vh;
@@ -75,7 +71,6 @@ body {
     position: absolute;
     z-index: -1;
     overflow: hidden;
-
   }
   .gradient-2 {
     // background: linear-gradient(141deg, rgba(98,0,240,.5) 0%, rgba(0,0,0,.5) 22%, rgba(0,0,0,.5) 51%, rgba(140,88,0,.5) 67%, rgba(0,0,0,1) 100%);
@@ -87,7 +82,6 @@ body {
     position: absolute;
     z-index: -1;
     overflow: hidden;
-
   }
   // navbar
   .navbar {
@@ -100,7 +94,6 @@ body {
     background: #fff;
     height: 80px;
     color: #000;
-
   }
   .event-details {
     text-transform: uppercase;
@@ -118,19 +111,37 @@ body {
     font-weight: 100;
     text-decoration: none;
     color: #000;
-
   }
+//   .menu-nav ul  {
+//     list-style: none;
+//     text-decoration: none;
+// font-size: 3rem;
+// color: #fff;
+//     text-transform: uppercase;
+//     margin-bottom: 2rem;
+//   }
+  // ul.landing-page-nav  {
+  //   list-style: none;
+  //   color: #fff;
+  // }
 
 
-  .nav-menu-back {
-  }
-  .menu-nav ul a {
-    text-decoration: none;
-    color: #fff;
-    list-style: none;
-    text-transform: uppercase;
+
+    nav.menu-nav>ul li {
+      list-style: none;
+      text-decoration: none;
+
+
+      a {
+        text-decoration: none;
+        color: #fff;
+            text-transform: uppercase;
     margin-bottom: 2rem;
-  }
+    font-size: 2rem;
+      }
+      
+    }
+
   li {
     margin-bottom: 15px;
     font-size: 28px
@@ -138,8 +149,6 @@ body {
   ul:first-child {
     margin-top: 150px
   }
-
-
   .event-title {
     font-weight: bold;
     text-transform: capitalize;
@@ -147,7 +156,6 @@ body {
     color: #000;
     text-transform: uppercase
 }
-
 .event-date {
   font-size: 12px;
   font-weight: 400;
@@ -156,3 +164,111 @@ body {
   font-weight: 700;
   text-transform: uppercase;
 }
+
+
+// black navbar
+// section.navbar {
+//   background: #000;
+//   color: #fff;
+// }a {}li {}section.navbar.normal {}
+
+// h1.event-title {
+//   color: #fff;
+// }
+
+
+// footer
+footer {
+  position: relative;
+  text-transform: uppercase;
+  opacity: .7;
+  font-size: 1em;
+  text-align: center;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+
+   img {
+     height: 1.5em
+   }
+  h3 {
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+  
+}
+
+
+//stars
+/* ============================================================================================== 
+SED Innovations
+https://sed.am
+https://mkrtchyan.ga
+================================================================================================= */
+
+
+@keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+  from {background-position:0 0;}
+  to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-webkit-keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-moz-keyframes move-clouds-back {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+@-ms-keyframes move-clouds-back {
+  from {background-position: 0;}
+  to {background-position:10000px 0;}
+}
+
+.stars, .twinkling, .clouds {
+position:absolute;
+top:0;
+left:0;
+right:0;
+bottom:0;
+width:100%;
+height:100%;
+// display:block;
+// z-index: -5;
+}
+
+.stars {
+background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+z-index:-5;
+}
+
+.twinkling{
+background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+z-index:-4;
+
+-moz-animation:move-twink-back 200s linear infinite;
+-ms-animation:move-twink-back 200s linear infinite;
+-o-animation:move-twink-back 200s linear infinite;
+-webkit-animation:move-twink-back 200s linear infinite;
+animation:move-twink-back 200s linear infinite;
+}
+
