--- a/style.css
+++ b/style.css
@@ -74,6 +74,19 @@ video {
   overflow: hidden;
 }
 
+.lion-bg {
+  background: url(imgs/lion.svg);
+  height: 100vh;
+  width: 100vw;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+  min-height: 600px;
+  z-index: 5;
+  opacity: 0.05;
+  overflow: hidden;
+}
+
 .navbar {
   max-width: 1366px;
   margin: 0 auto;
