--- a/style.scss
+++ b/style.scss
@@ -83,6 +83,23 @@ body {
     z-index: -1;
     overflow: hidden;
   }
+
+  .lion-bg{
+    // background: linear-gradient(141deg, rgba(98,0,240,.5) 0%, rgba(0,0,0,.5) 22%, rgba(0,0,0,.5) 51%, rgba(140,88,0,.5) 67%, rgba(0,0,0,1) 100%);
+    background: url(imgs/lion.svg);
+    height: 100vh;
+    width: 100vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    // height: calc(100vh);
+    min-height: 600px;
+    // object-fit: cover;
+    // position: absolute;
+    z-index: 5;
+    opacity: .05;
+    overflow: hidden;
+  }
   // navbar
   .navbar {
     max-width: 1366px;
